--- a/css/estilos.css
+++ b/css/estilos.css
@@ -31,9 +31,17 @@ body{
 background-color: black;
 
 }
+
+header{
+
+background: linear-gradient(to bottom,black, rgb(58, 2, 63))
+
+
+
+}
 .logoTamaño{
 display: flex;
-height: 200px;
+height: 300px;
 width: 170px;
 
 
@@ -156,6 +164,24 @@ grid-area: "header";
         
         
         }
+ @keyframes aparecer  {
+
+    0% {opacity: 100%;}   
+
+    50% {opacity: 30%;}  
+
+    100% {opacity:100%;}  
+
+    } 
+    
+  .animacion  {
+
+    animation-name: aparecer;
+    animation-delay: 1s;
+    animation-duration: 4s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+  }  
         
 @media screen and (max-width:500px) {
 
@@ -164,7 +190,7 @@ grid-area: "header";
         
     
         grid-template-columns: 1fr;
-        grid-template-rows: 0,5fr 0,5fr 0,2fr ;
+        grid-template-rows: 0,5fr 0,5fr 0,2...............qfr ;
         grid-template-areas: 
             "header"
             "main"
