--- a/css/estilos.css
+++ b/css/estilos.css
@@ -83,13 +83,12 @@ width: 50px;
 background-color: black;
 
 }*/
-/*.formulario{
-
-position:relative ;
-left: 800px;
+.formulario{
+display: block;
 
 
-}*/
+
+}
 .modelos{
 
 height: 500px;
@@ -105,12 +104,13 @@ align-items: center;
 
 }
 
+
 main{
     background-color: rgb(255, 255, 255);
  
     }
 
-.cajaPadre{
+/*.cajaPadre{
 
     display: grid;
 
@@ -129,10 +129,11 @@ flex-direction: column;
 flex-wrap: wrap;
 /*flex-flow: column wrap;*
 
-align-items: stretch;*/
+align-items: stretch;
 
 
-}
+}*/
+
 
 
 .areaEncabezado{
@@ -196,10 +197,25 @@ color: white;
     --bs-navbar-toggler-icon-bg: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%280, 249, 249, 249' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
     --bs-navbar-toggler-border-color: rgb(249, 249, 249);
 } 
+
+.menufondo{
+
+    border-color: rgb(245, 242, 242);
+    border-width: 1px;
+    border-style: solid;
+
+} 
+.tamañoCarru{
+
+ width: 1500px;
+    
+} 
+
+
   
 @media screen and (max-width:500px) {
 
-    .cajaPadre{
+    /*.cajaPadre{
 
         
     
@@ -211,9 +227,9 @@ color: white;
             "footer";
 
     
-}
+}*/
 
-.modelosPosicion{
+/*.modelosPosicion{
 
 display: flex;
 flex-direction: column;
@@ -244,9 +260,17 @@ align-items: center;
  
  padding: 15px 15px;
 
+}*/
+.animacion{
+    height: 300px;
+     width: 300px;
 }
+.nuevosModelos{
+
+    font-size: 50px;
 
 
+}
 
 }
 
